--- a/insurance.html
+++ b/insurance.html
@@ -189,10 +189,10 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Start Date 
                     </h4>
-                    <h3 class="mb-5" id="ip-sd">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ip-sd">Loading ...</h3>
                     <h4 class="font-weight-normal mb-3">End Date 
                     </h4>
-                    <h3 class="mb-5" id="ip-ed">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ip-ed">Loading ...</h3>
                     
                   </div>
                 </div>
@@ -203,7 +203,7 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Premium Ammount <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="ip-pa">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ip-pa">Loading ...</h3>
                   </div>
                 </div>
               </div>
@@ -213,7 +213,7 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Tenure Years <i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="ip-ty">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ip-ty">Loading ...</h3>
                   </div>
                 </div>
               </div>
@@ -241,10 +241,10 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Start Date 
                     </h4>
-                    <h3 class="mb-5" id="ulip-sd">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ulip-sd">Loading ...</h3>
                     <h4 class="font-weight-normal mb-3">End Date 
                     </h4>
-                    <h3 class="mb-5" id="ulip-ed">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ulip-ed">Loading ...</h3>
                     
                   </div>
                 </div>
@@ -255,7 +255,7 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Premium Ammount <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="ulip-pa">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ulip-pa">Loading ...</h3>
                   </div>
                 </div>
               </div>
@@ -265,7 +265,7 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Tenure Years <i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="ulip-ty">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ulip-ty">Loading ...</h3>
                   </div>
                 </div>
               </div>
