--- a/investment.html
+++ b/investment.html
@@ -224,10 +224,10 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Maturity Date <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="bond-md">$ 15,0000</h3>
+                    <h3 class="mb-5" id="bond-md">Loading ...</h3>
                     <h4 class="font-weight-normal mb-3">Coupon Rate <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="bond-cr">$ 15,0000</h3>
+                    <h3 class="mb-5" id="bond-cr">Loading ...</h3>
                     
                   </div>
                 </div>
@@ -264,10 +264,10 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Maturity Date <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="db-md">$ 15,0000</h3>
+                    <h3 class="mb-5" id="db-md">Loading ...</h3>
                     <h4 class="font-weight-normal mb-3">Yeild <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="db-y">$ 15,0000</h3>
+                    <h3 class="mb-5" id="db-y">Loading ...</h3>
                     
                   </div>
                 </div>
