--- a/pention.html
+++ b/pention.html
@@ -199,10 +199,10 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Current Balance <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="epf-cb">$ 15,0000</h3>
+                    <h3 class="mb-5" id="epf-cb">Loading ...</h3>
                     <h4 class="font-weight-normal mb-3">Total Balance <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="epf-tb">$ 15,0000</h3>
+                    <h3 class="mb-5" id="epf-tb">Loading ...</h3>
                   </div>
                 </div>
               </div>
@@ -230,7 +230,7 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Current Ammount <i class="mdi mdi-chart-line mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="ppf-cb">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ppf-cb">Loading ...</h3>
                     
                   </div>
                 </div>
@@ -241,7 +241,7 @@
                     <img src="assets/images/dashboard/circle.svg" class="card-img-absolute" alt="circle-image" />
                     <h4 class="font-weight-normal mb-3">Maturity Date <i class="mdi mdi-bookmark-outline mdi-24px float-right"></i>
                     </h4>
-                    <h3 class="mb-5" id="ppf-md">$ 15,0000</h3>
+                    <h3 class="mb-5" id="ppf-md">Loading ...</h3>
                     
                   </div>
                 </div>
