--- a/pages/samples/register.html
+++ b/pages/samples/register.html
@@ -28,39 +28,27 @@
                 <div class="brand-logo">
                   <img src="../../assets/images/logo.svg">
                 </div>
-                <h4>New here?</h4>
-                <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
+                <h4>Login In</h4>
+                <h6 class="font-weight-light">Signing up is easy. Enter Phone Number linked with your Bank Accounts</h6>
                 <form class="pt-3">
                   <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
-                  </div>
-                  <div class="form-group">
-                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
-                  </div>
-                  <div class="form-group">
-                    <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                      <option>Country</option>
-                      <option>United States of America</option>
-                      <option>United Kingdom</option>
-                      <option>India</option>
-                      <option>Germany</option>
-                      <option>Argentina</option>
-                    </select>
-                  </div>
-                  <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                    <input type="number" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Phone Number">
                   </div>
                   <div class="mb-4">
                     <div class="form-check">
                       <label class="form-check-label text-muted">
-                        <input type="checkbox" class="form-check-input"> I agree to all Terms & Conditions </label>
+                        <input type="checkbox" class="form-check-input" onchange="terms(event)"> I agree to all Terms & Conditions </label>
                     </div>
                   </div>
+                  
                   <div class="mt-3">
-                    <a class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN UP</a>
+                    <button disabled id ="btn"class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" onclick="login()">SIGN UP</button>
                   </div>
-                  <div class="text-center mt-4 font-weight-light"> Already have an account? <a href="login.html" class="text-primary">Login</a>
-                  </div>
+                  <script>
+                    const terms=(ev)=>{
+                      $("#btn").get(0).disabled=!ev.target.checked
+                    }
+                  </script>
                 </form>
               </div>
             </div>
