--- a/pages/samples/register.html
+++ b/pages/samples/register.html
@@ -15,6 +15,9 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="../../assets/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/pincode-input@0.1.0/dist/pincode-input.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pincode-input@0.4.2/dist/pincode-input.min.css" />
+
     <!-- End layout styles -->
     <link rel="shortcut icon" href="../../assets/images/favicon.ico" />
   </head>
@@ -23,33 +26,44 @@
       <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center auth">
           <div class="row flex-grow">
-            <div class="col-lg-4 mx-auto">
-              <div class="auth-form-light text-left p-5">
-                <div class="brand-logo">
+            <div class="col-lg-5 mx-auto">
+              <div class="auth-form-light text-left text-center p-5">
+                <div class="brand-logo ">
                   <img src="../../assets/images/logo.svg">
                 </div>
-                <h4>Login In</h4>
-                <h6 class="font-weight-light">Signing up is easy. Enter Phone Number linked with your Bank Accounts</h6>
-                <form class="pt-3">
-                  <div class="form-group">
+                <h4>Login</h4>
+                <h6 class="font-weight-light">Enter Phone Number linked with your Bank Account ans a PIN</h6>
+                <div class="pt-3 justify-content-center">
+                  <div class="form-group ">
                     <input type="number" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Phone Number">
                   </div>
+                  <div class="d-flex mb-3 justify-content-center">
+                    <div id="pin"></div>
+                  </div>
+                  <h6>Secret Pin</h6>
                   <div class="mb-4">
-                    <div class="form-check">
-                      <label class="form-check-label text-muted">
-                        <input type="checkbox" class="form-check-input" onchange="terms(event)"> I agree to all Terms & Conditions </label>
+                    <div class="form-check" >
+                      <label class="text-muted">
+                        <input style="border-width: 2px;" type="checkbox" class="form-check-input" onchange="terms(event)"> I agree to all Terms & Conditions </label>
                     </div>
                   </div>
-                  
-                  <div class="mt-3">
-                    <button disabled id ="btn"class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" onclick="login()">SIGN UP</button>
+                  <div class="mt-3 ">
+                    <button disabled id ="btn"class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" onclick="login()">Log In</button>
                   </div>
                   <script>
+                        new PincodeInput('#pin', {
+                        count: 4,
+                        secure: true,
+                        previewDuration: 500,
+                        onInput: (value) => {
+                          console.log(value)
+                        }
+                      })
                     const terms=(ev)=>{
                       $("#btn").get(0).disabled=!ev.target.checked
                     }
                   </script>
-                </form>
+                </div>
               </div>
             </div>
           </div>
@@ -68,6 +82,7 @@
     <script src="../../assets/js/off-canvas.js"></script>
     <script src="../../assets/js/hoverable-collapse.js"></script>
     <script src="../../assets/js/misc.js"></script>
+    
     <!-- endinject -->
   </body>
 </html>
