--- a/login.html
+++ b/login.html
@@ -15,6 +15,9 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="../../assets/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/pincode-input@0.1.0/dist/pincode-input.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pincode-input@0.4.2/dist/pincode-input.min.css" />
+
     <!-- End layout styles -->
     <link rel="shortcut icon" href="../../assets/images/favicon.ico" />
   </head>
@@ -23,37 +26,32 @@
       <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center auth">
           <div class="row flex-grow">
-            <div class="col-lg-4 mx-auto">
-              <div class="auth-form-light text-left p-5">
-                <div class="brand-logo">
+            <div class="col-lg-5 mx-auto">
+              <div class="auth-form-light text-left text-center p-5">
+                <div class="brand-logo ">
                   <img src="../../assets/images/logo.svg">
                 </div>
-                <h4>Hello! let's get started</h4>
-                <h6 class="font-weight-light">Sign in to continue.</h6>
-                <form class="pt-3">
-                  <div class="form-group">
-                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username" value="ansumannayak528@gmail.com">
+                <h4>Login</h4>
+                <h6 class="font-weight-light">Enter Phone Number linked with your Bank Account ans a PIN</h6>
+                <div class="pt-3 justify-content-center">
+                  <div class="form-group ">
+                    <input id="phn"type="number" class="form-control form-control-lg" id="exampleInputUsername1" onkeyup="terms()" placeholder="Phone Number">
                   </div>
-                  <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password" value="Ansman528@">
+                  <div class="d-flex mb-3 justify-content-center">
+                    <div id="pin"></div>
                   </div>
-                  <div class="mt-3">
-                    <a class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN IN</a>
-                  </div>
-                  <div class="my-2 d-flex justify-content-between align-items-center">
-                    <div class="form-check">
-                      <label class="form-check-label text-muted">
-                        <input type="checkbox" class="form-check-input"> Keep me signed in </label>
+                  <h6>Secret Pin</h6>
+                  <div class="mb-4">
+                    <div class="form-check" >
+                      <label class="text-muted">
+                        <input  id= "tc"style="border-width: 2px;" type="checkbox" class="form-check-input" onchange="terms()"> I agree to all Terms & Conditions </label>
                     </div>
-                    <a href="#" class="auth-link text-black">Forgot password?</a>
                   </div>
-                  <div class="mb-2">
-                    <button type="button" class="btn btn-block btn-facebook auth-form-btn">
-                      <i class="mdi mdi-facebook me-2"></i>Connect using facebook </button>
+                  <div class="mt-3 ">
+                    <button disabled id ="btn" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" onclick="login()">Log In</button>
                   </div>
-                  <div class="text-center mt-4 font-weight-light"> Don't have an account? <a href="register.html" class="text-primary">Create</a>
-                  </div>
-                </form>
+                  
+                </div>
               </div>
             </div>
           </div>
@@ -72,6 +70,8 @@
     <script src="../../assets/js/off-canvas.js"></script>
     <script src="../../assets/js/hoverable-collapse.js"></script>
     <script src="../../assets/js/misc.js"></script>
+    <script src="../../assets/js/login.js"></script>
+    
     <!-- endinject -->
   </body>
 </html>
