--- a/pages/samples/register.html
+++ b/pages/samples/register.html
@@ -35,7 +35,7 @@
                 <h6 class="font-weight-light">Enter Phone Number linked with your Bank Account ans a PIN</h6>
                 <div class="pt-3 justify-content-center">
                   <div class="form-group ">
-                    <input type="number" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Phone Number">
+                    <input id="phn"type="number" class="form-control form-control-lg" id="exampleInputUsername1" onchange="terms()" placeholder="Phone Number">
                   </div>
                   <div class="d-flex mb-3 justify-content-center">
                     <div id="pin"></div>
@@ -44,23 +44,26 @@
                   <div class="mb-4">
                     <div class="form-check" >
                       <label class="text-muted">
-                        <input style="border-width: 2px;" type="checkbox" class="form-check-input" onchange="terms(event)"> I agree to all Terms & Conditions </label>
+                        <input  id= "tc"style="border-width: 2px;" type="checkbox" class="form-check-input" onchange="terms()"> I agree to all Terms & Conditions </label>
                     </div>
                   </div>
                   <div class="mt-3 ">
-                    <button disabled id ="btn"class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" onclick="login()">Log In</button>
+                    <button disabled id ="btn" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" onclick="login()">Log In</button>
                   </div>
                   <script>
+                    var pin=0
                         new PincodeInput('#pin', {
                         count: 4,
                         secure: true,
                         previewDuration: 500,
                         onInput: (value) => {
-                          console.log(value)
+                         pin=value
+                         terms()
                         }
                       })
-                    const terms=(ev)=>{
-                      $("#btn").get(0).disabled=!ev.target.checked
+                      
+                    const terms=()=>{
+                      $("#btn").get(0).disabled=!$("#tc").get(0).checked | pin.length!=4 | $("#phn").get(0).value >1e10 | $("#phn").get(0).value <1e9
                     }
                   </script>
                 </div>
