--- a/login.html
+++ b/login.html
@@ -47,7 +47,8 @@
                         <input  id= "tc"style="border-width: 2px;" type="checkbox" class="form-check-input" onchange="terms()"> I agree to all Terms & Conditions </label>
                     </div>
                   </div>
-                  <div class="mt-3 ">
+                  <div class="mt-3 "id="sub">
+                    
                     <button disabled id ="btn" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" onclick="login()">Log In</button>
                   </div>
                   
