--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Purple Admin</title>
+    <title>VisualPe</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
@@ -29,10 +29,10 @@
             <div class="col-lg-5 mx-auto">
               <div class="auth-form-light text-left text-center p-5">
                 <div class="brand-logo ">
-                  <img src="../../assets/images/logo.svg">
+                 <h1 style="color: blueviolet;"><strong> VisualPe</strong></h1>
                 </div>
                 <h4>Login</h4>
-                <h6 class="font-weight-light">Enter Phone Number linked with your Bank Account ans a PIN</h6>
+                <h6 class="font-weight-light">Enter Phone Number linked with your Bank Account and your secret PIN</h6>
                 <div class="pt-3 justify-content-center">
                   <div class="form-group ">
                     <input id="phn"type="number" class="form-control form-control-lg" id="exampleInputUsername1" onkeyup="terms()" placeholder="Phone Number">
