--- a/investment.html
+++ b/investment.html
@@ -185,7 +185,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="mf-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -220,7 +220,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="bond-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -262,7 +262,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="db-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -304,7 +304,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="etf-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -339,7 +339,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="nps-pi" style="height:250px"></canvas>
                     <h4 class="font-weight-normal mb-3">Current Value <i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
@@ -354,10 +354,10 @@
                     
                     <h4 class="font-weight-normal mb-3">Tier I State<i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5" id="nps-t1">95,5741</h2>
+                    <h2 class="mb-5" id="nps-t1">Loading...</h2>
                     <h4 class="font-weight-normal mb-3">Tier II State<i class="mdi mdi-diamond mdi-24px float-right"></i>
                     </h4>
-                    <h2 class="mb-5" id="nps-t2">95,5741</h2>
+                    <h2 class="mb-5" id="nps-t2">Loading...</h2>
                   </div>
                 </div>
               </div>
@@ -383,7 +383,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="gs-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -422,7 +422,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="cp-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -462,7 +462,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="reit-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -497,7 +497,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="invit-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -532,7 +532,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="aif-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -567,7 +567,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="sip-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -606,7 +606,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="eq-bar" style="height:250px"></canvas>
                   </div>
                 </div>
@@ -641,7 +641,7 @@
               <div class="col-lg-6 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
-                    <h4 class="card-title">Bar chart</h4>
+                    <h4 class="card-title">Invested Value Vs Current Value</h4>
                     <canvas id="cis-bar" style="height:250px"></canvas>
                   </div>
                 </div>
